--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 /[Bb]uilds/
 /[Ll]ogs/
 /[Uu]ser[Ss]ettings/
+/ServerData/
+/Server/public/
+/Server/node_modules/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
